Fix: Improve .htaccess to properly exclude static files and add MIME types in Apache config

--- a/docker/apache.conf
+++ b/docker/apache.conf
@@ -4,6 +4,13 @@
     <Directory /var/www/html/public>
         AllowOverride All
         Require all granted
+        Options -Indexes +FollowSymLinks
+        
+        # S'assurer que les fichiers statiques sont servis avec les bons types MIME
+        <FilesMatch "\.(css|js|jpg|jpeg|png|gif|svg|ico|woff|woff2|ttf|eot|map)$">
+            Header set Content-Type "text/css; charset=utf-8" env=CSS
+            Header set Content-Type "application/javascript; charset=utf-8" env=JS
+        </FilesMatch>
     </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
