Fix: Force .htaccess to exclude static files with stricter rules and enable mod_headers

--- a/docker/apache.conf
+++ b/docker/apache.conf
@@ -5,12 +5,16 @@
         AllowOverride All
         Require all granted
         Options -Indexes +FollowSymLinks
-        
-        # Désactiver le rewriting pour les fichiers statiques
-        <FilesMatch "\.(css|js|jpg|jpeg|png|gif|svg|ico|woff|woff2|ttf|eot|map|pdf|zip|txt|json|xml)$">
-            RewriteEngine Off
-        </FilesMatch>
     </Directory>
+
+    # S'assurer que les types MIME sont corrects pour les fichiers statiques
+    <LocationMatch "\.(css)$">
+        Header set Content-Type "text/css; charset=utf-8"
+    </LocationMatch>
+    
+    <LocationMatch "\.(js)$">
+        Header set Content-Type "application/javascript; charset=utf-8"
+    </LocationMatch>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
