--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,20 +1,20 @@
 Options -Indexes
 RewriteEngine On
 
-# RÈGLE 1: Exclure explicitement les extensions de fichiers statiques EN PREMIER
-# Cette règle doit être la première pour empêcher toute réécriture des fichiers statiques
+# CRITIQUE: Exclure les fichiers statiques AVANT TOUTE AUTRE RÈGLE
+# Cette règle doit être absolument la première et utiliser [L] pour arrêter le traitement
 RewriteCond %{REQUEST_URI} \.(css|js|jpg|jpeg|png|gif|svg|ico|woff|woff2|ttf|eot|map|pdf|zip|txt|json|xml)$ [NC]
-RewriteRule ^(.*)$ - [L]
+RewriteRule . - [L]
 
-# RÈGLE 2: Si le fichier existe physiquement, le servir directement (pas de réécriture)
+# Si le fichier existe physiquement, le servir directement
 RewriteCond %{REQUEST_FILENAME} -f
-RewriteRule ^(.*)$ - [L]
+RewriteRule . - [L]
 
-# RÈGLE 3: Si c'est un répertoire qui existe, le servir directement
+# Si c'est un répertoire qui existe, le servir directement
 RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^(.*)$ - [L]
+RewriteRule . - [L]
 
-# RÈGLE 4: Redirige tout le reste vers index.php avec le paramètre url
+# Redirige tout le reste vers index.php avec le paramètre url
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
