--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,16 +1,17 @@
 Options -Indexes
 RewriteEngine On
 
-# RÈGLE ABSOLUE 1: Si le fichier existe physiquement, le servir DIRECTEMENT (pas de réécriture)
+# RÈGLE 1: Si le fichier existe physiquement, le servir DIRECTEMENT (pas de réécriture)
+# Cette règle doit être en PREMIER pour servir les fichiers existants
 RewriteCond %{REQUEST_FILENAME} -f
 RewriteRule ^(.*)$ - [L]
 
-# RÈGLE ABSOLUE 2: Si c'est un répertoire qui existe, le servir DIRECTEMENT
+# RÈGLE 2: Si c'est un répertoire qui existe, le servir DIRECTEMENT
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^(.*)$ - [L]
 
-# RÈGLE ABSOLUE 3: Exclure TOUS les fichiers statiques par extension (même s'ils n'existent pas)
-# Cette règle empêche toute réécriture vers index.php pour ces extensions
+# RÈGLE 3: Exclure TOUS les fichiers statiques par extension
+# Même si le fichier n'existe pas, ne PAS réécrire vers index.php (retourner 404 naturellement)
 RewriteCond %{REQUEST_URI} \.(css|js|jpg|jpeg|png|gif|svg|ico|woff|woff2|ttf|eot|map|pdf|zip|txt|json|xml)$ [NC]
 RewriteRule ^(.*)$ - [L]
 
